[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/ShitProj.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Etc/Ball.png" type="Texture2D" id=2]
[ext_resource path="res://Scenes/Weapons/ShitTrail.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Effects/Shit.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[node name="ShitProj" type="Area2D"]
process_mode = 1
script = ExtResource( 1 )
atk = 0.0
spdSlow = 300.0
spdFast = 350.0
shit = ExtResource( 4 )

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color( 0.324219, 0.195325, 0.144889, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2( 0.5, 0.8 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.083
one_shot = true
autostart = true

[node name="SpawnTimer2" type="Timer" parent="."]
wait_time = 0.334
one_shot = true
autostart = true

[node name="ShitTrail" parent="." instance=ExtResource( 3 )]
position = Vector2( -8, 0 )
width = 25.0
default_color = Color( 0.32549, 0.196078, 0.145098, 1 )
length = 125.0

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Bullet_body_exited"]
[connection signal="viewport_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="SpawnTimer2" to="." method="_on_SpawnTimer_timeout"]
